include/maplibre_native_c/map.h

/** Options used when creating a map. */
typedef struct mln_map_options {
  uint32_t size;
  /**
   * Initial logical map width in UI pixels. Must be positive.
   *
   * Attaching a render session replaces this with the render target extent, and
   * mln_render_session_resize() replaces it again. Until the first attach it is
   * the viewport that camera and projection queries such as
   * mln_map_camera_for_lat_lng_bounds() and mln_map_pixel_for_lat_lng() are
   * answered against.
   */
  uint32_t width;
  /** Initial logical map height in UI pixels. See width. */
  uint32_t height;
  /**
   * UI-to-device pixel scale. Must be positive and finite.
   *
   * Unlike width and height, this is fixed for the lifetime of the map and
   * selects sprites, glyphs, and raster tiles for every frame the map renders.
   * Render targets carry their own scale factor for geometry and shaders, so
   * create the map with the scale factor you intend to render at. A render
   * session attached or resized with a different scale factor logs a warning
   * and renders styled imagery chosen for the map's density.
   */
  double scale_factor;
  /** One of mln_map_mode. Defaults to MLN_MAP_MODE_CONTINUOUS. */
  uint32_t map_mode;
  /**
   * Decodes MapLibre Tile (MLT) tiles whose integer streams use FastPFOR
   * encodings. Defaults to false.
   *
   * Enable this on maps that read vector sources created with
   * MLN_STYLE_VECTOR_TILE_ENCODING_MLT from a tile set that uses FastPFOR. It
   * is fixed for the lifetime of the map and applies to every MLT source the
   * map loads. A map created with this false decodes every other MLT encoding
   * and logs a tile parse warning for the FastPFOR ones.
   */
  bool fast_pfor_enabled;
} mln_map_options;
/**
 * Creates a map handle on the runtime owner thread.
 *
 * On success, the runtime owner thread becomes the map owner thread.
 *
 * Returns:
 * - MLN_STATUS_OK on success.
 * - MLN_STATUS_INVALID_ARGUMENT when runtime is null or not live, out_map is
 *   null, *out_map is not null, or options are invalid.
 * - MLN_STATUS_WRONG_THREAD when called from a thread other than the runtime
 *   owner thread.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_map_create(
  mln_runtime runtime, const mln_map_options* options, mln_map* out_map
) MLN_NOEXCEPT;
/**
 * Requests a repaint for a continuous map.
 *
 * Continuous maps also invalidate automatically when style data, resources,
 * camera, or transitions change. Ask attached render targets to process the
 * latest update when MLN_RUNTIME_EVENT_MAP_RENDER_UPDATE_AVAILABLE is reported.
 * Repaint requests do not produce
 * MLN_RUNTIME_EVENT_MAP_STILL_IMAGE_FINISHED or
 * MLN_RUNTIME_EVENT_MAP_STILL_IMAGE_FAILED events.
 *
 * Returns:
 * - MLN_STATUS_OK when the request was accepted.
 * - MLN_STATUS_INVALID_ARGUMENT when map is null or not live.
 * - MLN_STATUS_INVALID_STATE when map is not in MLN_MAP_MODE_CONTINUOUS.
 * - MLN_STATUS_WRONG_THREAD when called from a thread other than the map owner
 *   thread.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_map_request_repaint(mln_map map) MLN_NOEXCEPT;
/**
 * Requests one still image for a static or tile map.
 *
 * Pump the runtime and poll runtime events for this map until
 * MLN_RUNTIME_EVENT_MAP_STILL_IMAGE_FINISHED or
 * MLN_RUNTIME_EVENT_MAP_STILL_IMAGE_FAILED is reported. While the request is
 * pending, process each MLN_RUNTIME_EVENT_MAP_RENDER_UPDATE_AVAILABLE event
 * from this map. Render targets use mln_render_session_render_update(). Surface
 * targets present directly. A render-update
 * call can report a result other than MLN_RENDER_RESULT_RENDERED before the
 * next update is available; keep pumping and polling in that case. After
 * MLN_RUNTIME_EVENT_MAP_STILL_IMAGE_FINISHED, use the latest successful texture
 * update when the host needs image bytes or a backend texture.
 *
 * Returns:
 * - MLN_STATUS_OK when the request was accepted.
 * - MLN_STATUS_INVALID_ARGUMENT when map is null or not live.
 * - MLN_STATUS_INVALID_STATE when map is not in MLN_MAP_MODE_STATIC or
 *   MLN_MAP_MODE_TILE, or when a still-image request is already pending.
 * - MLN_STATUS_WRONG_THREAD when called from a thread other than the map owner
 *   thread.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_map_request_still_image(mln_map map) MLN_NOEXCEPT;
/**
 * Destroys a map handle on its owner thread.
 *
 * The map must not have an attached render session.
 *
 * Destruction also discards this map's queued events, including queued style
 * loading failures. There is no flush and no terminal event, so the last state
 * a host mirrored from events can stay behind the map's final state. Snapshot
 * whatever state the host needs while the map is still live, and let teardown
 * proceed without awaiting an event for this map.
 *
 * Returns:
 * - MLN_STATUS_OK on success.
 * - MLN_STATUS_INVALID_ARGUMENT when map is null or not a live map handle.
 * - MLN_STATUS_INVALID_STATE when map still has an attached render target
 *   session.
 * - MLN_STATUS_WRONG_THREAD when called from a thread other than the map owner
 *   thread.
 * - MLN_STATUS_NATIVE_ERROR when an internal exception is converted to status.
 */
MLN_API mln_status mln_map_destroy(mln_map map) MLN_NOEXCEPT;
/**
 * Loads a style URL through MapLibre Native style APIs.
 *
 * This is a map command. The return status reports synchronous acceptance or
 * failure. Later native success and failure are reported through runtime
 * events. A URL that is unreachable, malformed, or serves invalid style
 * content is still accepted synchronously; every such failure arrives later as
 * a style loading-failed event, so hosts report style URL errors from the event
 * stream rather than from this return status.
 *
 * Returns:
 * - MLN_STATUS_OK when the load request was accepted.
 * - MLN_STATUS_INVALID_ARGUMENT when map is null, not live, or url is null.
 * - MLN_STATUS_WRONG_THREAD when called from a thread other than the map owner
 *   thread.
 * - MLN_STATUS_NATIVE_ERROR when a synchronous native error is reported or an
 *   internal exception is converted to status.
 */
MLN_API mln_status
mln_map_set_style_url(mln_map map, const char* url) MLN_NOEXCEPT;
/**
 * Loads inline style JSON through MapLibre Native style APIs.
 *
 * This is a map command. The return status reports synchronous acceptance or
 * failure. Later native success and failure are reported through runtime
 * events. Malformed JSON can fail synchronously and still enqueue a
 * loading-failed event.
 *
 * Returns:
 * - MLN_STATUS_OK when the load request was accepted.
 * - MLN_STATUS_INVALID_ARGUMENT when map is null, not live, or json is null.
 * - MLN_STATUS_WRONG_THREAD when called from a thread other than the map owner
 *   thread.
 * - MLN_STATUS_NATIVE_ERROR when a synchronous native error is reported or an
 *   internal exception is converted to status.
 */
MLN_API mln_status
mln_map_set_style_json(mln_map map, const char* json) MLN_NOEXCEPT;