bindings/dotnet/src/Maplibre.Native/Generated/map.g.cs


    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_map_create(mln_runtime* runtime, [NativeTypeName("const mln_map_options *")] mln_map_options* options, mln_map** out_map);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_map_request_repaint(mln_map* map);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_map_request_still_image(mln_map* map);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_map_destroy(mln_map* map);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_map_set_style_url(mln_map* map, [NativeTypeName("const char *")] sbyte* url);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_map_set_style_json(mln_map* map, [NativeTypeName("const char *")] sbyte* json);
  }
}
